[gd_scene load_steps=3 format=3 uid="uid://b7jh8k2l9m5n0"]

[ext_resource type="Script" path="res://leaderboard_ui.gd" id="1_1"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[node name="LeaderboardUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "üèÜ LEADERBOARD üèÜ"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="LoadingLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Loading leaderboard..."
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="RefreshButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Refresh"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Close" 
